--- a/Pandas Fundamentals_02.ipynb
+++ b/Pandas Fundamentals_02.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "9d5e0b05-fefb-44c1-9e08-d3ac04bf0cd4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4ccd9244-fdb7-4575-ab6e-e373fc4f7dbc",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "227966b8-1525-4980-9267-a93778d6334e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "8a8a38bf",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "nan"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "43dd7356-4af4-4bdf-abc8-b29e1e93a31a",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "ac1cc690",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a73f7830",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "'a'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "7d1f0efd",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "'a'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "6019e903",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "np.float64(12.0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "59ca5817",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "6cbffe07",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "c53eaa12",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "a40503da",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "ed6ab8af",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "[[10, 20, 30, 40, 50], ['Ram', 'Hari', 'Sita', 'Gita', 'Rita']]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "id": "5b376e71-1f43-400b-9386-ef318282eab2",
    "metadata": {},
    "outputs": [
@@ -466,19 +466,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Marks</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Name</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Hari</td>\n",
+       "      <td>Sita</td>\n",
+       "      <td>Gita</td>\n",
+       "      <td>Rita</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -486,11 +486,11 @@
       ],
       "text/plain": [
        "      2020  2021  2022  2023  20240\n",
-       "Marks   NaN   NaN   NaN   NaN   NaN\n",
-       "Name    NaN   NaN   NaN   NaN   NaN"
+       "Marks    10    20    30    40    50\n",
+       "Name    Ram  Hari  Sita  Gita  Rita"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "6ed1fdb3",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "2  shyam  30"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "822bb2d0",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "3   gita   50"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "id": "e2ff803b",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "1  ole   23"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "f76b8890",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
        "3  gita   50"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "id": "ed93c467",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "id": "e2985394",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "id": "3a48a3b3",
    "metadata": {},
    "outputs": [
@@ -865,10 +865,12 @@
       "text/plain": [
        "0      Ram\n",
        "1    Shyam\n",
+       "2     hari\n",
+       "3     gita\n",
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "id": "29ef5bfb",
    "metadata": {},
    "outputs": [
@@ -919,6 +921,16 @@
        "      <td>30</td>\n",
        "      <td>Shyam</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40</td>\n",
+       "      <td>hari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>gita</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -926,10 +938,12 @@
       "text/plain": [
        "   Age   Name\n",
        "0   20    Ram\n",
-       "1   30  Shyam"
+       "1   30  Shyam\n",
+       "2   40   hari\n",
+       "3   50   gita"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "id": "f45d7462",
    "metadata": {},
    "outputs": [
@@ -987,7 +1001,7 @@
        "3   50"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "25c457ac",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1062,7 @@
        "3   50  gita"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "id": "d9d0286e",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1123,7 @@
        "1  Shyam   30"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "id": "8dbc4558",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1190,7 @@
        "2   hari   40"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "64f56cbc",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1215,7 @@
        "Name: Age, dtype: bool"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "id": "dc7abf2b",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1277,7 @@
        "3  gita   50"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "id": "a90e248c",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1299,7 @@
        "Index([2, 3], dtype='int64')"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "id": "9f31dd83",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1361,7 @@
        "3  gita   50"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 34,
    "id": "41f316f2",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1434,7 @@
        "3   gita   50"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "id": "26fd4249",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 36,
    "id": "8338cc40",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1485,7 @@
        "Index(['Name', 'Age'], dtype='object')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 37,
    "id": "871208b7",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1506,7 @@
        "Index(['Name', 'Age'], dtype='object')"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
