Codes all upto Date

--- a/Functions_07.ipynb
+++ b/Functions_07.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "e0533cd8",
    "metadata": {},
    "outputs": [
@@ -716,9 +716,12 @@
        "      <th>smoker</th>\n",
        "      <th>day</th>\n",
        "      <th>time</th>\n",
-       "      <th>size</th>\n",
+       "      <th>sizes</th>\n",
        "      <th>bill_category</th>\n",
        "      <th>day_new</th>\n",
+       "      <th>tips_category</th>\n",
+       "      <th>gender_new</th>\n",
+       "      <th>tip_percentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -733,6 +736,9 @@
        "      <td>2</td>\n",
        "      <td>mid</td>\n",
        "      <td>Sunday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>5.944673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -745,6 +751,9 @@
        "      <td>3</td>\n",
        "      <td>low</td>\n",
        "      <td>Sunday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>16.054159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -757,6 +766,9 @@
        "      <td>3</td>\n",
        "      <td>mid</td>\n",
        "      <td>Sunday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>16.658734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -769,6 +781,9 @@
        "      <td>2</td>\n",
        "      <td>mid</td>\n",
        "      <td>Sunday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>13.978041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -781,29 +796,144 @@
        "      <td>4</td>\n",
        "      <td>high</td>\n",
        "      <td>Sunday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>14.680765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>29.03</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>gorgeous</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>20.392697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>27.18</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>high</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>7.358352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>22.67</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mid</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>8.822232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>17.82</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mid</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>9.820426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>18.78</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Thur</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mid</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>15.974441</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>244 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_bill   tip     sex smoker  day    time  size bill_category day_new\n",
-       "0       16.99  1.01  Female     No  Sun  Dinner     2           mid  Sunday\n",
-       "1       10.34  1.66    Male     No  Sun  Dinner     3           low  Sunday\n",
-       "2       21.01  3.50    Male     No  Sun  Dinner     3           mid  Sunday\n",
-       "3       23.68  3.31    Male     No  Sun  Dinner     2           mid  Sunday\n",
-       "4       24.59  3.61  Female     No  Sun  Dinner     4          high  Sunday"
+       "     total_bill   tip     sex smoker   day    time  sizes bill_category  \\\n",
+       "0         16.99  1.01  Female     No   Sun  Dinner      2           mid   \n",
+       "1         10.34  1.66    Male     No   Sun  Dinner      3           low   \n",
+       "2         21.01  3.50    Male     No   Sun  Dinner      3           mid   \n",
+       "3         23.68  3.31    Male     No   Sun  Dinner      2           mid   \n",
+       "4         24.59  3.61  Female     No   Sun  Dinner      4          high   \n",
+       "..          ...   ...     ...    ...   ...     ...    ...           ...   \n",
+       "239       29.03  5.92    Male     No   Sat  Dinner      3          high   \n",
+       "240       27.18  2.00  Female    Yes   Sat  Dinner      2          high   \n",
+       "241       22.67  2.00    Male    Yes   Sat  Dinner      2           mid   \n",
+       "242       17.82  1.75    Male     No   Sat  Dinner      2           mid   \n",
+       "243       18.78  3.00  Female     No  Thur  Dinner      2           mid   \n",
+       "\n",
+       "      day_new tips_category gender_new  tip_percentage  \n",
+       "0      Sunday      standard      Women        5.944673  \n",
+       "1      Sunday      standard        Men       16.054159  \n",
+       "2      Sunday      standard        Men       16.658734  \n",
+       "3      Sunday      standard        Men       13.978041  \n",
+       "4      Sunday      standard      Women       14.680765  \n",
+       "..        ...           ...        ...             ...  \n",
+       "239  Saturday      gorgeous        Men       20.392697  \n",
+       "240  Saturday      standard      Women        7.358352  \n",
+       "241  Saturday      standard        Men        8.822232  \n",
+       "242  Saturday      standard        Men        9.820426  \n",
+       "243  Thursday      standard      Women       15.974441  \n",
+       "\n",
+       "[244 rows x 12 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mapping_day = {'Sun' : 'Sunday', 'Mon' : 'Monday', 'Tue' : 'Tuesday', 'Fri' : 'Friday'}\n",
+    "mapping_day = {'Sun' : 'Sunday', 'Mon' : 'Monday', 'Tue' : 'Tuesday','Thur':'Thursday', 'Fri' : 'Friday','Sat':'Saturday'}\n",
     "tips['day_new']=tips.day.map(mapping_day)\n",
-    "tips.head()"
+    "tips"
    ]
   },
   {
@@ -1135,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "60da45ef",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1275,7 @@
        "<Axes: ylabel='total_bill'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1590,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "60ddbd69",
    "metadata": {},
    "outputs": [],
@@ -1604,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "7256845c",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1950,7 @@
        "[244 rows x 10 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1832,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "ec648f3e",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2190,7 @@
        "[244 rows x 11 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "eecb4d25",
    "metadata": {},
    "outputs": [
