Files and notes uptodate

--- a/StringOperation_05.ipynb
+++ b/StringOperation_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f64934a2-84e7-4767-ad22-68709a9e9d23",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "107cba8f-e3ea-4ac8-b5c2-385157761aec",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "4    Cris Brown  cris.123@outlook.com"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "47084e30-8fbf-4026-8704-30c42615de89",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "dc4c6914-80b5-4ef2-9319-3056940e6d61",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "22fdbb02-d45b-435e-b389-2b2dd50321cc",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "dcbe4719-7dc6-4d15-81b7-0c88d798eb58",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "4  Cris Brown  cris.123@outlook.com"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "3afe2e1b-f98f-4f32-aed6-6afc14db4fc0",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "4    Cris Brown  cris.123@outlook.com        0        0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "15b35a92-89bb-470a-8fc3-b87be18b2674",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "7734c34e-c9f7-4bb3-af38-f60bab28356f",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
        "4      0            373450   8.0500   NaN        S      Allen  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "128997bb-027f-4f72-9d91-6184bcbaec1c",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "61a45fa6-7983-4e83-a600-f2aa8c5f5f71",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "119f8c08-3a62-4ebc-ab99-6d702454097e",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
        "4                          William Henry  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "d14622df-6b61-4495-ba8b-73c939340242",
    "metadata": {},
    "outputs": [
@@ -1041,16 +1041,17 @@
       "text/plain": [
        "Title\n",
        "Mr.          517\n",
-       "Miss.        183\n",
+       "Miss.        182\n",
        "Mrs.         125\n",
        "Master.       40\n",
        "Dr.            7\n",
        "Rev.           6\n",
+       "Col.           2\n",
        "Mlle.          2\n",
        "Major.         2\n",
-       "Col.           2\n",
-       "Don.           1\n",
+       "Ms.            1\n",
        "Mme.           1\n",
+       "Don.           1\n",
        "Lady.          1\n",
        "Sir.           1\n",
        "Capt.          1\n",
@@ -1059,7 +1060,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "9d51f940-ab03-4ba4-8c54-69935d18be25",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "0e408b6b-45e3-4512-ae70-98461edeb731",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1104,7 @@
        "Name: Last_Name, dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "74fef006-ecdb-44ec-bf1a-bcb499ff205b",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1130,7 @@
        "Name: Last_Name, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "11d7d87d-29ac-435d-b9c2-7e4c6c50ed8b",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1162,7 @@
        "Name: Last_Name, Length: 891, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "a45dafe4-bed5-4eff-a63b-50bdad26fc6d",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1196,7 @@
        "Name: First_Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "91d3fca2-73eb-4e2c-a1d4-39b940adf67f",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1269,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "02e743be-6012-4d0d-9e52-7146636372b1",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1569,7 @@
        "[517 rows x 15 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "id": "f93330d8-4fa3-4272-af42-ae999bcfdd97",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1612,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "id": "dda5f20d-cc8e-432e-a98b-03bb168f5706",
    "metadata": {},
    "outputs": [
@@ -1632,7 +1633,7 @@
        "'Andersson'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "id": "3f8040bd-2f76-45d0-b4c7-a52ed335c3c6",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1654,7 @@
        "630"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "id": "c878fc22-6551-4847-98a9-cb7993d8242b",
    "metadata": {},
    "outputs": [],
@@ -1675,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "id": "3aeb3e96-f0db-4e02-a709-ec37d0d2a644",
    "metadata": {},
    "outputs": [
@@ -1964,7 +1965,7 @@
        "[348 rows x 15 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1985,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myData",
    "language": "python",
    "name": "python3"
   },
@@ -1998,7 +1999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
