New files and datasets added

--- a/FrequencyCount_&_CrossTab_9.ipynb
+++ b/FrequencyCount_&_CrossTab_9.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6f8b380",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1d2867ea",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "[891 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "ccaf87dc",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,17 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c41c35a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1ee551b67d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1d1210d1570>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "0229af6b",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "       male    54.644809  13.742690  38.945006"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,6 +488,14 @@
    "source": [
     "pd.crosstab([titanic['class'],titanic['sex']],titanic['survived'],margins=True,normalize='columns')*100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b70b9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
